Add support for Firestore; Simplify GET /message API to make this easier
